BuildHughes/translation-tool/inputs/source_meta/objects/Master_Attribute__c.object
<CustomObject>
    <description>Master Attribute</description>
    <fields>
        <fullName>Agent_Instructions__c</fullName>
        <description>E.g. Depot Maintenance</description>
        <inlineHelpText>E.g. Depot Maintenance</inlineHelpText>
        <label>Agent Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_UI_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Community UI Display</description>
        <label>Community UI Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Data Type</description>
        <inlineHelpText>Data Type</inlineHelpText>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Default Value</description>
        <inlineHelpText>Default Value</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Display Sequence</description>
        <label>Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_in_Attributes_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display in Attributes Section</description>
        <label>Display in Attributes Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display on Asset</description>
        <label>Display on Account360 Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Hover_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display on Hover Over</description>
        <label>Display on Hover Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Editable</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Attribute_Desc__c</fullName>
        <description>Master Attribute Description</description>
        <label>Master Attribute Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Attribute_ID__c</fullName>
        <description>Master Attribute ID</description>
        <label>Master Attribute ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Attribute_Key__c</fullName>
        <description>Master Attribute Key, Used to Make as Unique, and it is Concatination of Object Type and Attribute Name</description>
        <externalId>true</externalId>
        <label>Master Attribute Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Attribute_Name__c</fullName>
        <description>Master Attribute Name</description>
        <inlineHelpText>Master Attribute Name</inlineHelpText>
        <label>Master Attribute Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Attribute_ObjectType__c</fullName>
        <description>Master Attribute Object Type</description>
        <inlineHelpText>Master Attribute Object Type</inlineHelpText>
        <label>Master Attribute Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Save_on_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save on Case</description>
        <inlineHelpText>Save on Case</inlineHelpText>
        <label>Save on Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_WWTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to WWTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Field_Name__c</fullName>
        <description>Source Field Name</description>
        <inlineHelpText>Source Field Name</inlineHelpText>
        <label>Source Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System</description>
        <inlineHelpText>Source System</inlineHelpText>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRM PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>CRM Installation Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <description>Source Table</description>
        <inlineHelpText>Source Table</inlineHelpText>
        <label>Source Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UI Display</description>
        <inlineHelpText>UI Display</inlineHelpText>
        <label>UI Display</label>
        <type>Checkbox</type>
    </fields>
    <label>Master Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Master_Attribute_Name__c</columns>
        <columns>Master_Attribute_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATTR-{0000000000}</displayFormat>
        <label>SEQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>